Docker/eks-presto-gateway.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: emr-presto
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: emr-presto
  name: deployment-app-emr-presto-gateway
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: app-emr-presto-gateway
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: app-emr-presto-gateway
    spec:
      containers:
      - image: xxxx.dkr.ecr.xxx.amazonaws.com/emr-presto-gateway:latest
        imagePullPolicy: Always
        name: app-emr-presto-gateway
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  namespace: emr-presto
  name: service-emr-presto-gateway
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: app-emr-presto-gateway
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: emr-presto
  name: ingress-emr-presto-gateway
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    kubernetes.io/ingress.class: alb
spec:
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: service-emr-presto-gateway
              port:
                number: 80
